Rename, yaml fixes

--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Belt/belts.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Belt/belts.yml
@@ -1127,17 +1127,18 @@
       amount: 2
     - id: RMCWeaponPistolCOD50WinterWyvern
 
+- type: entity
   parent: ClothingBeltBase # Can't have storage slots on this one
-  id: RMCBeltHolsterM11
-  name: M276 pattern M11 holster rig
-  description: Special issue variant of the M276 designed to holster the M11 automatic pistol and 8 spare mags.
+  id: RMCBeltHolsterM13
+  name: M276 pattern M13 holster rig
+  description: Special issue variant of the M276 designed to holster the M13 automatic pistol and 8 spare mags.
   components:
   - type: Sprite
     sprite: _RMC14/Objects/Clothing/Belt/holster_smg.rsi
     layers:
     - state: icon
     - sprite: _RMC14/Objects/Weapons/Guns/gun_underlays.rsi
-      state: m11
+      state: m13
       map: [ "enum.CMItemSlotsLayers.Fill" ] # This one's fine to use the CMItemSlots visualizer
       visible: false
   - type: Clothing
@@ -1151,25 +1152,26 @@
     - 0,0,8,1 # should be 9 slots
     whitelist:
       tags:
-      - RMCMagazinePistolM11
-      - RMCMagazinePistolM11Ext
-      - RMCMagazinePistolM11Drum
-      - RMCWeaponPistolM11
+      - RMCMagazinePistolM13
+      - RMCMagazinePistolM13Ext
+      - RMCMagazinePistolM13Drum
+      - RMCWeaponPistolM13
   - type: ContainerContainer
     containers:
       pouch: !type:ContainerSlot
   - type: ItemSlots
     slots:
       pouch:
-        name: M11 holster
-        - RMCWeaponPistolM11
+        name: M13 holster
+        whitelist:
+          tags:
+          - RMCWeaponPistolM13
   - type: CMHolster
     whitelist:
       tags:
-      - RMCWeaponPistolM11
- 
- - type: entity
   - type: CMItemSlots
+
+- type: entity
   parent: CMBeltMarine
   id: RMCM17BeltFilled
   suffix: Filled
