add drone guide to larva and drone

--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/larva.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/larva.yml
@@ -5,6 +5,9 @@
   id: CMXenoLarva
   name: Larva
   components:
+  - type: GuideHelp
+    guides:
+    - RMCGuideRoleDrone
   - type: GhostRole
     name: cm-job-name-xeno-larva
   - type: Sprite
