--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/drone.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/drone.yml
@@ -100,6 +100,9 @@
   parent: CMXenoDroneBase
   id: CMXenoDrone
   components:
+  - type: GuideHelp
+    guides:
+    - RMCGuideRoleDrone
   - type: Sprite
     sprite: _RMC14/Mobs/Xenonids/Drone/drone.rsi
   - type: Xeno
