--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Engineering/chief_engineer.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Engineering/chief_engineer.yml
@@ -83,3 +83,13 @@
 - type: playTimeTracker
   id: CMJobChiefEngineer
   isHumanoid: true
+
+- type: entity
+  parent: CMGuidebookRole
+  id: RMCGuidebookRoleCE
+  name: The CE
+  description: The Chief Engineer.
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: Sprite
+    state: chief_engineer
