--- a/Resources/Prototypes/_RMC14/Roles/Jobs/AuxiliarySupport/auxiliary_support_officer.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/AuxiliarySupport/auxiliary_support_officer.yml
@@ -105,7 +105,7 @@
 
 - type: entity
   parent: CMGuidebookRole
-  id: CMGuidebookRoleASO
+  id: RMCGuidebookRoleASO
   name: Auxiliary Support Officer
   categories: [ HideSpawnMenu ]
   components:
