--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Requisitions/quartermaster.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Requisitions/quartermaster.yml
@@ -22,7 +22,7 @@
   startingGear: CMGearQuartermaster
   icon: "CMJobIconQuartermaster"
   requireAdminNotify: true
-  joinNotifyCrew: true
+  joinNotifyCrew: false
   supervisors: cm-job-supervisors-aso
   accessGroups:
   - CMQM
