--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/queen.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/queen.yml
@@ -1,4 +1,4 @@
-- type: entity
+﻿- type: entity
   parent:
   - CMXenoDeveloped
   - CMXenoTail
@@ -270,4 +270,4 @@
   - type: MotionDetectorTracked
     isQueenEye: true
   - type: Visibility
-    visibility: 32770
+    layer: 32770
