--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/Crew/requisitions.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/Crew/requisitions.yml
@@ -411,13 +411,13 @@
       entries:
       - id: RMCBoxMagazinePistolM13
         name: Magazine Box (M13 x 22)
-        box: RMCMagazineM11
+        box: RMCMagazinePistolM13
       - id: RMCBoxMagazinePistolM13Ext
         name: Magazine Box (Ext M13 x 14)
-        box: RMCMagazineExtendedM11
+        box: RMCMagazinePistolM13Ext
       - id: RMCBoxMagazinePistolM13Drum
         name: Magazine Box (Drum M13 x 12)
-        box: RMCMagazineDrumM13
+        box: RMCMagazinePistolM13Drum
       - id: RMCBoxMagazineSMGM63
         name: Magazine Box (M63 x 12)
         box: CMMagazineSMGM63
