--- a/Resources/Prototypes/_RMC14/Roles/Jobs/AuxiliarySupport/gunship_pilot.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/AuxiliarySupport/gunship_pilot.yml
@@ -6,7 +6,7 @@
   playTimeTracker: CMJobPilotGunship
   requirements:
   - !type:TotalJobsTimeRequirement
-    group: CMJobsDropship
+    group: CMJobsDropshipPilot
     time: 18000 # 5 hours
   ranks:
     RMCRankSecondLT: []
