--- a/Resources/Prototypes/_RMC14/radio_channels.yml
+++ b/Resources/Prototypes/_RMC14/radio_channels.yml
@@ -140,7 +140,7 @@
 - type: radioChannel
   id: MarineQuebec
   name: chat-radio-marine-quebec
-  keycode: "q"
+  keycode: "Q"
   frequency: 1497
   color: "#840084"
   longRange: true
