--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Species/base.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Species/base.yml
@@ -348,4 +348,4 @@
   - type: RMCMobCollision
   - type: RMCRest
   - type: StunOnExplosionReceived
-    weak: true
+    weak: true # TODO should also blind and cause hearing loss
