Mob collision tweaks

--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/base_xeno.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/base_xeno.yml
@@ -357,6 +357,7 @@
     offset: 0, 0.5
   - type: RMCArmorModifier
   - type: RMCObstacleSlamCauserImmune
+  - type: RMCMobCollisionMass
 
 - type: entity
   abstract: true
@@ -489,6 +490,7 @@
   id: RMCXenoMobCollision
   components:
   - type: MobCollision
+    minimumSpeedModifier: 0.25
   - type: RMCMobCollision
 
 - type: speechVerb
