update  guidebook with new guides (#6186)
Co-authored-by: DrSmugleaf <drsmugleaf@gmail.com>

--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/drone.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/drone.yml
@@ -101,6 +101,9 @@
   parent: CMXenoDroneBase
   id: CMXenoDrone
   components:
+  - type: GuideHelp
+    guides:
+    - RMCGuideRoleDrone
   - type: Sprite
     sprite: _RMC14/Mobs/Xenonids/Drone/drone.rsi
   - type: Xeno
