--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/base_xeno.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/base_xeno.yml
@@ -357,6 +357,7 @@
     offset: 0, 0.5
   - type: RMCArmorModifier
   - type: RMCObstacleSlamCauserImmune
+  - type: XenoRankNames
 
 - type: entity
   abstract: true
