Fix most xenos not showing ranks (#6203)

--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/base_xeno.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/base_xeno.yml
@@ -358,6 +358,7 @@
   - type: RMCArmorModifier
   - type: RMCObstacleSlamCauserImmune
   - type: RMCMobCollisionMass
+  - type: XenoRankNames
 
 - type: entity
   abstract: true
