--- a/Resources/Prototypes/_RMC14/Recipes/Reactions/chemicals.yml
+++ b/Resources/Prototypes/_RMC14/Recipes/Reactions/chemicals.yml
@@ -14,11 +14,22 @@
     intensityPerUnit: 0.5 # 50+50 reagent for maximum explosion
     intensitySlope: 4
     maxTotalIntensity: 100
-    
+
+- type: reaction
+  id: RMCEthylredoxrazineOxidation
+  reactants:
+    RMCEthanol:
+      amount: 1
+    CMEthylredoxrazine:
+      amount: 1
+  products:
+    Water: 2
+
+# variant for vanilla ethanol from drinks
 - type: reaction
   id: EthylredoxrazineOxidation
   reactants:
-    RMCEthanol:
+    Ethanol:
       amount: 1
     CMEthylredoxrazine:
       amount: 1
