yml fixes for vendomats

--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/Squad/leader.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/Squad/leader.yml
@@ -144,9 +144,9 @@
         points: 1
       - id: CMKelotaneAutoInjector
         points: 1
-      - id: CMInjectorOxycodone
+      - id: CMOxycodoneAutoInjector
         points: 2
-      - id: CMInjectorTramadol
+      - id: CMTramadolAutoInjector
         points: 1
       - id: CMTricordrazineAutoInjector
         points: 1
