--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/Squad/medic.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/Squad/medic.yml
@@ -61,8 +61,8 @@
       - id: CMPillCanisterKelotane
         points: 5
         recommended: true
-      - id: CMPillCanisterPeridaxon
-        points: 5
+      # - id: CMPillCanisterPeridaxon
+      #   points: 5
       - id: CMPillCanisterTramadol
         points: 5
         recommended: true
@@ -78,9 +78,9 @@
         points: 1
       - id: CMKelotaneAutoInjector
         points: 1
-      - id: CMAutoinjectorOxycodone
+      - id: CMOxycodoneAutoInjector
         points: 2
-      - id: CMAutoinjectorTramadol
+      - id: CMTramadolAutoInjector
         points: 1
       - id: CMTricordrazineAutoInjector
         points: 1
