--- a/Resources/Prototypes/_RMC14/Entities/Objects/Medical/firstaidkits.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Medical/firstaidkits.yml
@@ -151,8 +151,8 @@
     - id: CMScalpel
     - id: CMHemostat
     - id: CMRetractor
-#    - id: CMOxycodoneAutoinjector # TODO RMC14
-#    - id: CMOxycodoneAutoinjector # TODO RMC14
+    - id: CMOxycodoneAutoInjector # TODO RMC14
+    - id: CMOxycodoneAutoInjector # TODO RMC14
 
 - type: entity
   parent: CMFirstAidKit
