yml fixes again x3

--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Pouches/first_aid_pouch.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Pouches/first_aid_pouch.yml
@@ -102,5 +102,5 @@
     contents:
     - id: CMBicaridineAutoInjector
     - id: CMKelotaneAutoInjector
-    #- id: CMTramadolAutoInjector
+    - id: CMTramadolAutoInjector
     - id: CMEmergencyAutoInjector
