--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/medical.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/medical.yml
@@ -80,7 +80,7 @@
         amount: 3
       - id: CMOxycodoneAutoInjector
         amount: 3
-      - id: CMTramadolAutoinjector
+      - id: CMTramadolAutoInjector
         amount: 3
       - id: CMTricordrazineAutoInjector
         amount: 3
