--- a/Resources/Prototypes/_RMC14/Entities/Structures/Xeno/xeno_weeds.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Xeno/xeno_weeds.yml
@@ -77,6 +77,7 @@
   - type: XenoFriendly
   - type: Damageable
     damageContainer: StructuralXeno
+    damageModifierSet: Weed
   - type: Destructible
     thresholds:
     - trigger:
