--- a/Resources/Prototypes/_RMC14/Entities/Structures/orbital_cannon.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/orbital_cannon.yml
@@ -199,6 +199,7 @@
       delayPer: 0.4
       spread: 12
       checkProtectionPer: true
+      explosionEffect: RMCExplosionEffectClusterOB
   - type: WarpPoint
     location: 1 orbital bombardment
 
@@ -283,3 +284,25 @@
   - type: Tag
     tags:
     - HideContextMenu
+
+# Effects
+- type: entity
+  id: RMCExplosionEffectClusterOB
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: TimedDespawn
+    lifetime: 2.5
+  - type: CMExplosionEffect
+    explosion: null
+    shockWave: RMCExplosionEffectClusterOBShockWave
+
+- type: entity
+  id: RMCExplosionEffectClusterOBShockWave
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: TimedDespawn
+    lifetime: 1
+  - type: RMCExplosionShockWave
+    falloffPower: 50
+    sharpness: 25
+    width: 0.7
