tweak: M13 drum magazine box wording

--- a/Resources/Prototypes/_RMC14/Recipes/Construction/magazine_box_crafting.yml
+++ b/Resources/Prototypes/_RMC14/Recipes/Construction/magazine_box_crafting.yml
@@ -347,7 +347,7 @@
   startNode: start
   targetNode: RMCBoxMagazinePistolM13DrumEmpty
   category: construction-category-cm-box-magazine
-  description: A magazine box that can contain M13 drums.
+  description: A magazine box that can contain drum M13 mags.
   icon:
     sprite: _RMC14/Objects/Weapons/Guns/Ammunition/Boxes/modular_boxes.rsi
     state: smg_box
