--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/goon_leader.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/goon_leader.yml
@@ -1,13 +1,13 @@
-# Corporate Bodyguard
+# Corporate Security Lead
 - type: job
   parent: CMJobBase
-  id: RMCWeYaGoon
-  name: rmc-job-name-pmc-bodyguard
+  id: RMCWeYaGoonLead
+  name: rmc-job-name-pmc-bodyguard-lead
   description: rmc-ghost-role-information-pmc-description
-  playTimeTracker: RMCJobWeYaGoon
+  playTimeTracker: RMCJobWeYaGoonLead
   ranks:
     RMCRankWeYaOperator: []
-  startingGear: RMCJobWeYaGoon
+  startingGear: RMCJobWeYaGoonLead
   icon: CMJobIconLiaison
   joinNotifyCrew: false
   accessGroups:
@@ -26,24 +26,28 @@
         RMCSkillFireman: 2
         RMCSkillEndurance: 2
         RMCSkillMeleeWeapons: 1
+        RMCSkillMedical: 1
+        RMCSkillConstruction: 2
+        RMCSkillEngineer: 2
+        RMCSkillLeadership: 1
 
 - type: playTimeTracker
-  id: RMCJobWeYaGoon
+  id: RMCJobWeYaGoonLead
 
 - type: startingGear
-  id: RMCJobWeYaGoon
+  id: RMCJobWeYaGoonLead
   equipment:
     id: RMCIDCardPMC
-    ears: RMCHeadsetDistressPMC
+    ears: RMCHeadsetDistressPMCLeader
     jumpsuit: RMCJumpsuitVeteranPMC
-    outerClothing: CMArmorM4PMCCorporate
+    outerClothing: CMArmorM4PMCCorporate # TODO RMC14: corporate/lead
     gloves: RMCHandsVeteranPMC
     head: ArmorHelmetPMC
     shoes: RMCBootsPMCFilled
     back: RMCSatchelLightpack # TODO RMC14: PMC combat backpack
     belt: CMM77BeltFilled # TODO RMC14: PMC re-sprite
-    suitstorage: WeaponRifleM54C # TODO RMC14: Corporate re-sprite (white)
-    pocket1: RMCPouchMagazine # TODO RMC14: PMC re-sprite
+    suitstorage: WeaponRifleSSG45
+    pocket1: RMCPouchMagazineLarge # TODO RMC14: PMC re-sprite
     pocket2: RMCPouchFirstAidPMCFill
   storage:
     back:
@@ -54,35 +58,36 @@
     - CMCrowbar
     - CMMRE # TODO RMC14: PMC CFR ration
     pocket1:
-    - CMMagazineRifleM54C
-    - CMMagazineRifleM54C
-    - CMMagazineRifleM54C
+    - RMCMagazineRifleSSG45AP
+    - RMCMagazineRifleSSG45AP
+    - RMCMagazineRifleSSG45AP
+    - RMCMagazineRifleSSG45AP
     outerClothing:
-    - CMMagazineRifleM54CAP
-    - CMMagazineRifleM54CAP
+    - RMCMagazineRifleSSG45AP
+    - RMCMagazineRifleSSG45AP
 
 - type: entity
   parent: MarkerBase
-  id: RMCRandomHumanoidWeYaGoon
-  name: weya corporate ghost role goon
+  id: RMCRandomHumanoidWeYaGoonLead
+  name: weya corporate ghost role goon leader
   suffix: Spawner, Player
   components:
   - type: Sprite
     layers:
     - state: red
   - type: RandomHumanoidSpawner
-    settings: RMCWeYaGoon
+    settings: RMCWeYaGoonLead
 
 - type: randomHumanoidSettings
   parent: EventHumanoid
-  id: RMCWeYaGoon
+  id: RMCWeYaGoonLead
   components:
   - type: GhostRole
-    name: rmc-ghost-name-pmc-bodyguard
+    name: rmc-ghost-name-pmc-bodyguard-lead
     description: rmc-ghost-role-information-pmc-description
     rules: ghost-role-information-nonantagonist-rules
     reregister: false
-    job: RMCWeYaGoon
+    job: RMCWeYaGoonLead
     raffle:
       settings: short
   - type: GhostRoleApplySpecial
